# bytelabWESsime

./: .telescope_ignore.lua  172.16.55.33-key.pem  172.16.55.33.pem  README.md  TODO.txt  working_copy.c
components/ui_app/squareline/project/: CMakeLists.txt  esp32_gui.sll  esp32_gui.slp  esp32_gui.spj  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
components/ui_app/squareline/project/images/: ui_img_background_png.c  ui_img_barbi_png.c  ui_img_bl_logo_symbol_png.c  ui_img_colorwheel_icon_png.c  ui_img_home_icon_png.c  ui_img_icon_album_png.c  ui_img_icon_back_arrow_png.c  ui_img_icon_camera_png.c  ui_img_icon_cleaning_png.c  ui_img_icon_food_png.c  ui_img_icon_hangup_png.c  ui_img_icon_music_png.c  ui_img_icon_phone_png.c  ui_img_kontakti_png.c  ui_img_mama_png.c  ui_img_music_note_png.c  ui_img_oar_png.c  ui_img_oz_png.c  ui_img_parentallock_png.c  ui_img_rowboat_png.c  ui_img_settings_icon_png.c  ui_img_sime_dirty_lines_png.c  ui_img_sime_dying_png.c  ui_img_sime_happy_png.c  ui_img_sime_neutral_png.c  ui_img_sime_sad_png.c  ui_img_spooderman_png.c  ui_img_tata_png.c  ui_img_unselected_album_png.c  ui_img_unselected_back_arrow_png.c  ui_img_unselected_camera_png.c  ui_img_unselected_cleaning_png.c  ui_img_unselected_food_png.c  ui_img_unselected_hangup_png.c  ui_img_unselected_music_png.c  ui_img_unselected_phone_png.c  (+2 more)
main/: CMakeLists.txt  app_main.c  audio.bak(external_speaker)  audio.c  audio.h  cacert.pem  https_server.c  intercom_audio.c  intercom_audio.h  keep_alive.c  sime.c  sime.h  wifi.c  wifi.h
(+36 files in other folders)
